# MetaBot

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  PENTEST_REPORT.md  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  __init__.py  api-credentials.py.template  apply_pragmas.py  codebase-restructure.md  coverage_report.txt  coverage_results.txt  docker-compose.override.yaml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  final_coverage.txt  final_results.txt  llms.txt  mega-config.yaml  mega-config.yaml.template  megabot-assessment.md  megabot-integration-roadmap.md  meta-config.yaml.template  pyproject.toml  requirements.txt  restructuring-tasks.md  setup.sh  test_adapters.py  test_manual.py  verification_coverage.txt
adapters/: __init__.py  discord_adapter.py  mcp_adapter.py  memu_adapter.py  nanobot_adapter.py  openclaw_adapter.py  push_notification_adapter.py  signal_adapter.py  slack_adapter.py  telegram_adapter.py  unified_gateway.py  voice_adapter.py
core/: __init__.py  admin_handler.py  agent_coordinator.py  agents.py  config.py  dependencies.py  discovery.py  drivers.py  instrumentation.py  interfaces.py  llm_providers.py  logging_setup.py  loki.py  message_router.py  orchestrator.py  orchestrator_components.py  permissions.py  projects.py  secrets.py
docs/: ADAPTER_AUDIT_REPORT.md  CROSS_DOMAIN_ANALYSIS.md  PLAN.md  adapters-unified-gateway.md  adapters.md  agent_coordinator.md  api.md  architecture.md  configuration.md  developer_notes.md  features.md  getting-started.md  (+10 more)
(+137 files in other folders)
